tampilan ak1 dan detailnya

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".activity.DetailAK1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.KeterampilanActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.IjazahActivity"
             android:exported="false" />
         <activity
