--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
 }
