Notif Pengumuman Done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         <activity
             android:name=".activity.UbahProfileActivity"
             android:exported="false" />
-        <activity
-            android:name=".activity.UbahDataActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".activity.UbahDataActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".activity.DetailAK1Activity"
             android:exported="false" />
