--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 
+    implementation 'com.airbnb.android:lottie:3.6.0'
 }
