--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
 
     implementation 'com.airbnb.android:lottie:3.6.0'
 }
