--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.ekpkdisnaker"
+        applicationId "com.diskominfo.ekpkdisnaker"
         minSdk 19
         targetSdk 31
         multiDexEnabled true
